--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.2",
+    "antd-img-crop": "^4.2.1",
     "axios": "^0.24.0",
     "braft-editor": "^2.3.9",
     "braft-extensions": "^0.1.1",
