--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.3",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
